refactor(users): Boot 4 Flyway starter, env-only secrets, proper HTTP codes and ports
- pom: spring-boot-starter-flyway instead of flyway-core (Boot 4); jjwt pinned via
  jjwt.version to the gateway's 0.12.6; spring-security-crypto only (BCrypt) instead
  of the full security starter, since auth is enforced at the gateway.
- config: datasource credentials and JWT_SECRET come from the environment with no
  defaults; default database is users_db; token lifetime defaults to 1h.
- HTTP: bad credentials -> 401, duplicate username/email -> 409 (also on a
  unique-constraint race), validation -> 400.
- layering: the use case now takes RegisterCommand/LoginCommand and returns
  AuthResult; password hashing and token issuance are behind PasswordHasher and
  TokenIssuer ports; the JPA mapper moved to the outbound adapter.
- tests: AuthService unit tests, AuthController MockMvc tests and a JWT contract
  test checking sub = user UUID and roles = list, parsed like the gateway does.